--- a/package.json
+++ b/package.json
@@ -1,26 +1,77 @@
 {
-  "name": "blog-port",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
-  }
+    "name": "blog-port",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "prettier": {
+        "printWidth": 200,
+        "semi": true,
+        "singleQuote": true,
+        "tabWidth": 4,
+        "trailingComma": "all"
+    },
+    "dependencies": {
+        "@auth/prisma-adapter": "^2.7.4",
+        "@hookform/resolvers": "^3.9.1",
+        "@prisma/client": "^6.0.0",
+        "@radix-ui/react-alert-dialog": "^1.1.2",
+        "@radix-ui/react-dialog": "^1.1.2",
+        "@radix-ui/react-separator": "^1.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-toast": "^1.2.2",
+        "@radix-ui/react-tooltip": "^1.1.4",
+        "@reduxjs/toolkit": "^2.4.0",
+        "@supabase/auth-helpers-nextjs": "^0.10.0",
+        "@supabase/supabase-js": "^2.46.2",
+        "@tanstack/react-query": "^5.62.0",
+        "@tiptap/extension-image": "^2.10.3",
+        "@tiptap/react": "^2.10.3",
+        "@tiptap/starter-kit": "^2.10.3",
+        "@upstash/redis": "^1.34.3",
+        "axios": "^1.7.8",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
+        "firebase": "^11.0.2",
+        "jsonwebtoken": "^9.0.2",
+        "lucide-react": "^0.462.0",
+        "next": "15.0.3",
+        "next-seo": "^6.6.0",
+        "next-sitemap": "^4.2.3",
+        "react": "19.0.0-rc-66855b96-20241106",
+        "react-dom": "19.0.0-rc-66855b96-20241106",
+        "react-hook-form": "^7.53.2",
+        "react-redux": "^9.1.2",
+        "redux-persist": "^6.0.0",
+        "tailwind-merge": "^2.5.5",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/axios": "^0.14.4",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@types/redux-persist": "^4.3.1",
+        "@typescript-eslint/eslint-plugin": "^8.16.0",
+        "@typescript-eslint/parser": "^8.16.0",
+        "eslint": "^8",
+        "eslint-config-next": "15.0.3",
+        "eslint-config-prettier": "^9.1.0",
+        "postcss": "^8",
+        "prettier": "^3.4.1",
+        "prisma": "^6.0.0",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    },
+    "peerDependencies": {
+        "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
+        "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0"
+    }
 }
